Finishing Revisiting rock paper scissor assignment

--- a/RPS.html
+++ b/RPS.html
@@ -4,12 +4,28 @@
         <title>
             ROCK PAPER SCISSOR
         </title>
-        <script src="RPS.js">
-
-        </script>
     </head>
 
     <body>
 
+        <button class = 'rock'>
+            Rock
+        </button>
+        <button class = 'paper'>
+            Paper
+        </button>
+        <button class = 'scissor'>
+            Scissor
+        </button>
+
+        <div class = 'player' style="margin-top: 100px;">
+            Player score : <span id = 'player_score'> 0 </span>
+        </div>
+        <div class = 'computer' style="margin-top: 100px;">
+            Computer score : <span id = 'computer_score'> 0 </span>
+        </div>
+
+        <script src="RPS.js">   
+        </script>
     </body>
 </html>
